--- a/index.html
+++ b/index.html
@@ -19,25 +19,31 @@
         <span data-node-name="name">Lydia</span>
       </h1>
       <p class="two" data-node-name="greetingText">I really like your name btw!</p>
+      <img src="img/img1.jpeg" alt="" class="lydia-dp" data-node-name="imagePath">
     </div>
     <div class="three">
       <p data-node-name="text1">It's your birthday!!! :D</p>
+      <img src="img/img5.jpeg" alt="" class="lydia-dp" data-node-name="imagePath">
     </div>
     <div class="four">
       <div class="text-box">
         <p class="hbd-chatbox" data-node-name="textInChatBox">Happy birthday to you!! Yeee! Many many happy blah...</p>
+        <img src="img/img4.jpeg" alt="" class="lydia-dp" data-node-name="imagePath">
         <p class="fake-btn" data-node-name="sendButtonLabel">Send</p>
       </div>
     </div>
     <div class="five">
       <p class="idea-1" data-node-name="text2">That's what I was going to do.</p>
+      <img src="img/img2.jpeg" alt="" class="lydia-dp" data-node-name="imagePath">
       <p class="idea-2" data-node-name="text3">But then I stopped.</p>
       <p class="idea-3">
         <span data-node-name="text4">I realised, I wanted to do something</span>
         <strong data-node-name="text4Adjective">special</strong>.</p>
+        <img src="img/img7.jpeg" alt="" class="lydia-dp" data-node-name="imagePath">
       <p class="idea-4" data-node-name="text5Entry">Because,</p>
       <p class="idea-5">
         <span data-node-name="text5Content">You are Special</span>
+        <img src="img/img8.jpeg" alt="" class="lydia-dp" data-node-name="imagePath">
         <span class="smiley" data-node-name="smiley">:)</span>
       </p>
       <p class="idea-6">
@@ -46,7 +52,7 @@
       </p>
     </div>
     <div class="six">
-      <img src="img/lydia2.png" alt="" class="lydia-dp" data-node-name="imagePath">
+      <img src="img/img3.jpeg" alt="" class="lydia-dp" data-node-name="imagePath">
       <img src="img/hat.svg" alt="" class="hat">
       <div class="wish">
         <h3 class="wish-hbd" data-node-name="wishHeading">Happy Birthday!</h3>
