--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="one">
       <h1 class="one">
         <span data-node-name="greeting">Hellooo</span>
-        <span data-node-name="name">Preeeeet</span>
+        <span data-node-name="name">Preeti</span>
       </h1>
       <p class="two" data-node-name="greetingText">I really like your name btw!</p>
       <img src="img/pre6.jpg" height="380" width="450" alt="" class="two-img" data-node-name="imagePath">
